--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -70,6 +70,12 @@
 	background-color: $warm-gray-4;
 }
 
+.warm-gray-5 {
+	background-color: $warm-gray-5;
+}
+
+
+
 
 // flex box vertical center 
 
@@ -161,3 +167,13 @@
 
 
 
+
+
+
+
+.block-news-highlights .row {
+	margin-bottom: 0.25rem;
+	background-color: $warm-gray-5;
+	padding-top: 3rem;
+	padding-bottom: 3rem;
+}
