--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -7,6 +7,7 @@
 
 h1 {
     font-size: 7vw;
+    font-family: "adobe-caslon-pro",serif;
     
 	@include breakpoint(xlarge) {
 		font-size: 5rem;
@@ -29,6 +30,7 @@ h2 {
 
 h4 {
 	color: $warm-gray-2;
+	font-family: "proxima-nova",sans-serif;
 }
 
 p {
