--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -15,6 +15,7 @@
 
 // page header
 
+/*
 .block-page-head {
 	position: relative;
 	display: flex;
@@ -46,6 +47,7 @@
     top: 50%;
     transform: translateY(-50%);	
 }
+*/
 
 
 
@@ -54,11 +56,27 @@
 
 .block-skew {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 50vh;
-	background-color: #fc0;
 	margin-bottom: 5rem;
+	color: #fff;
+	text-align: center;
+	padding-top: 3rem;
+	height: 30vh;
+
+	@include breakpoint(medium) {
+		padding-top: 4rem;
+		height: 40vh;
+	}
+
+	@include breakpoint(large) {
+		height: 50vh;
+		padding-top: 5rem;
+	}
+
+	
+
 }
 
 .block-skew:after {
@@ -70,34 +88,13 @@
 	left: 0;
 	position: absolute;
 	right: 0;
-	transform: skewY(-2.5deg);
+	transform: skewY(-5deg);
 	transform-origin: 100%;
 	z-index: -1;
 }
 
 
 
-
-
-.video-shim-skew {
-	position: relative;
-	height: 12rem;
-	background-color: #fc0;
-}
-
-.video-shim-skew:before {
-	background: inherit;
-    top: -4.5rem;
-    content: '';
-    display: block;
-    height: 75%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    transform: skewY(-2.5deg);
-    transform-origin: 50%;
-    z-index: 1000;
-}
 
 
 
@@ -212,6 +209,19 @@
 .block-pad-lg {
 	padding: 12vw 3vw;
 }
+
+.block-pad-sm-bot {
+	padding-bottom: 4vw;
+}
+
+.block-pad-md-bot {
+	padding-bottom: 7vw;
+}
+
+.block-pad-lg-bot {
+	padding-bottom: 12vw;
+}
+
 
 
 
