--- a/_scss/custom/_nav.scss
+++ b/_scss/custom/_nav.scss
@@ -128,7 +128,7 @@
 	width: 25px;
 	height: 2px;
 	border-radius: 10px;
-	background-color: #000
+	background-color: #fff;
 }
 
 
@@ -143,13 +143,6 @@
 #hamburger.light .bottom-menu {
 	background-color: #000
 }
-
-.is-reveal-open .top-menu,
-.is-reveal-open .mid-menu,
-.is-reveal-open .bottom-menu {
-	background-color: #fff !important;
-}
-
 
 .top-menu {
 	top: 5px;
