--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -6,32 +6,58 @@
 
 
 h1 {
-    font-size: 7vw;
     font-family: "adobe-caslon-pro",serif;
+    font-size: 2rem;
     
+	@include breakpoint(medium) {
+   		font-size: 8vw;
+	}
+	@include breakpoint(large) {
+   		font-size: 7vw;
+	}
 	@include breakpoint(xlarge) {
 		font-size: 5rem;
 	}
 }
 
 h2 {
-    font-size: 1.75rem;
+	font-family: "adobe-caslon-pro",serif;
+	font-size: rem-calc(30);
     
 	@include breakpoint(medium) {
-		font-size: 6vw;
+		font-size: 7vw;
 	}
 	@include breakpoint(large) {
-		font-size: 5vw;
+		font-size: 6vw;
 	}
 	@include breakpoint(xlarge) {
-		font-size: 4rem;
+		font-size: rem-calc(70);
 	}
 }
 
 h4 {
 	color: $warm-gray-2;
 	font-family: "proxima-nova",sans-serif;
+	font-size: 1.25rem;
+	text-transform: uppercase;
+	letter-spacing: 0.1rem;
+	
+	@include breakpoint(medium) {
+		font-size: 1.5rem;
+	}
+	@include breakpoint(large) {
+		font-size: 1.75rem;
+	}
+	
 }
+
+h4 span {
+	display: inline-block;
+	padding-bottom: 0.5rem;
+	border-bottom: 1px solid $warm-gray-2;
+	
+}
+
 
 p {
 	
@@ -64,6 +90,29 @@ p.intro {
 	}
 	
 }
+
+
+a.view-more {
+	display: inline-block;
+	margin-top: 2rem;
+	padding: 0.25rem 2rem 0 0;
+	text-align: center;
+	color: #000;
+	opacity: 0.5;
+	font-size: 1.5rem;
+	border-top: 1px solid #151f25;
+	background-image: url('../img/arrow-view-more.svg');
+	background-repeat: no-repeat;
+	background-size: 21px 15px;
+	background-position: 100% 60%;
+}
+
+a.view-more:hover {
+	opacity: 1;
+}
+
+
+
 
 small {
 	display: block;
