--- a/_scss/custom/_blocks.scss
+++ b/_scss/custom/_blocks.scss
@@ -75,8 +75,6 @@
 		padding-top: 5rem;
 	}
 
-	
-
 }
 
 .block-skew:after {
@@ -93,7 +91,9 @@
 	z-index: -1;
 }
 
-
+.block-skew h1 {
+	color: #fff;
+}
 
 
 
