--- a/_scss/app.scss
+++ b/_scss/app.scss
@@ -7,10 +7,13 @@
 @include foundation-global-styles;
 @include foundation-grid;
 @include foundation-typography;
+/*
 @include foundation-button;
 @include foundation-forms;
+*/
 @include foundation-visibility-classes;
 @include foundation-float-classes;
+/*
 @include foundation-accordion;
 @include foundation-accordion-menu;
 @include foundation-badge;
@@ -21,7 +24,9 @@
 @include foundation-drilldown-menu;
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
+*/
 @include foundation-flex-video;
+/*
 @include foundation-label;
 @include foundation-media-object;
 @include foundation-menu;
@@ -31,22 +36,24 @@
 @include foundation-progress-bar;
 @include foundation-slider;
 @include foundation-sticky;
+*/
 @include foundation-reveal;
-@include foundation-switch;
+// @include foundation-switch;
 @include foundation-table;
+/*
 @include foundation-tabs;
 @include foundation-thumbnail;
 @include foundation-title-bar;
 @include foundation-tooltip;
 @include foundation-top-bar;
+*/
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
 
 
 // custom styles
-@import 'custom/variables',
-		'custom/type',
+@import 'custom/type',
 		'custom/nav',
 		'custom/close-bar',
 		'custom/pages',
