--- a/_scss/custom/_nav.scss
+++ b/_scss/custom/_nav.scss
@@ -15,16 +15,29 @@
 
 
 #brand {
-	font-size: 1.5rem;
-	color: #000;
 	position: absolute;
-	left: 1rem;
-	top: 0.5rem;
-	transition: all 300ms;
+	left: 2rem;
+	top: 2rem;
+	width: rem-calc(131);
+	height: rem-calc(23);
+	display: block;
+	margin: 0 auto;
+	background-image: url('../img/brand-wht.svg');
+	background-repeat: no-repeat;
+	background-size: rem-calc(131) rem-calc(23);
+	background-position: 50% 50%;
+	transition: top 300ms;
+	@include breakpoint(medium) {
+		width: rem-calc(164);
+		height: rem-calc(61);
+		background-image: url('../img/brand-tag-wht.svg');
+		background-size: rem-calc(164) rem-calc(61);
+		background-position: 50% 50%;
+	}	    
 }
 
 #brand.scrolled {
-	top: -3rem;
+	top: -4rem;
 }
 
 
@@ -38,10 +51,6 @@
 	width: 100%;
 }
 
-.navbar h4 {
-	margin-top: 0.5rem;
-}
-
 .mobilenav {
 	font-family: inherit;
 	top: 0;
@@ -53,6 +62,7 @@
 	height: 100%;
 	background: #fff;
 	margin: 0;
+	opacity: 0.97;
 }
 
 
@@ -60,19 +70,34 @@
 ------------------------------------------------------------------------ */
 
 .mobilenav li {
-  list-style-type: none;
-  text-align: center;
-  padding: 0.5rem;
-  font-size: 1.5rem;
+    font-family: "adobe-caslon-pro",serif;
+	list-style-type: none;
+	text-align: center;
+	padding: 0.75vh;
+	font-size: 6vh;
 }
 
 .mobilenav li a {
   text-decoration: none;
+  color: $dark-gray;
+  display: block;
   width: 100%;
 }
 
+.mobilenav li a:hover {
+  color: $warm-gray-2;
+}
+
 .mobilenav li:first-child {
-  	margin-top: 4rem;
+  	margin-top: 8vh;
+}
+
+.mobilenav li:last-child {
+  	margin-top: 6vh;
+ 	font-size: 4.25vh;
+ 	text-transform: uppercase;
+ 	letter-spacing: 0.2rem;
+ 	
 }
 
 
@@ -125,7 +150,7 @@
 .top-menu,
 .mid-menu,
 .bottom-menu {
-	width: 25px;
+	width: 30px;
 	height: 2px;
 	border-radius: 10px;
 	background-color: #fff;
@@ -149,11 +174,11 @@
 }
 
 .mid-menu {
-	top: 13px;
+	top: 15px;
 }
 
 .bottom-menu {
-	top: 21px;
+	top: 25px;
 }
 
 .menui {
@@ -174,10 +199,10 @@
 	position: absolute;
 	display: block;
 	padding: 9px;
-	height: 32px;
-	width: 32px;
+	height: 36px;
+	width: 36px;
 	margin: 0px;
-	top: 0;
+	top: 1rem;
 	right: 1rem;
 	transition: right 200ms;
 }
