--- a/_scss/custom/_video.scss
+++ b/_scss/custom/_video.scss
@@ -9,7 +9,7 @@
 	box-sizing: border-box;
     margin: 0;
 	width: 100%;
-	height: 100vh;
+	height: 116vh;
 	min-height: 100%;
 	z-index: 0;
     background: url(../videos/sample2.jpg) no-repeat center center;
@@ -98,21 +98,21 @@ video#bgvid {
     left: 0;
     position: absolute;
     right: 0;
-    transform: skewY(-2.5deg);
+    transform: skewY(-5deg);
     transform-origin: 50%;
 }
 
 .video-shim-skew .headline {
 	position: relative;
-	padding: 0 5vw 7vw 5vw;
+	padding: 2vh 5vw 7vh 5vw;
 	z-index: 200;
 	
 	@include breakpoint(large) {
-		padding: 0 10vw 6vw 10vw;
+		padding: 3vh 10vw 7vh 10vw;
 	}
 
 	@include breakpoint(xlarge) {
-		padding: 0 14vw 6vw 14vw;
+		padding: 7vh 14vh 8vh 14vw;
 	}
 
 }
